# microsoft_authenticator

./: .env  app.py  app_config.py  main.py  pyproject.toml  requirements.txt
templates/: display.html  index.html  mails.html
