[project]
name = "microsoft-authenticator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "certifi==2025.11.12",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.3",
    "flask==3.1.2",
    "flask-session==0.8.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "ms-identity-python[flask]",
    "msal==1.34.0",
    "msgspec==0.20.0",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pyjwt==2.10.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "urllib3==2.6.2",
    "werkzeug==3.1.4",
]

[tool.uv.sources]
ms-identity-python = { git = "https://github.com/azure-samples/ms-identity-python", rev = "834583646df315b79bc89f54808f4ae9c2a1ce59" }
